fix overflow scroll

--- a/app/assets/stylesheets/newsfeed.css
+++ b/app/assets/stylesheets/newsfeed.css
@@ -21,7 +21,7 @@
 
 .news-feed-post-container {
   grid-area: main;
-  overflow: auto;
+  overflow-y: scroll;
 }
 
 .right-bar-container {
