--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -394,5 +394,5 @@
 /* profile posts */
 .news-feed-post-container.profile {
   min-width: 500px;
-  overflow: auto;
+  overflow-y: scroll;
 }
